src/design/_styles.scss
//  -------------------
// HELPER CLASSES
//  -------------------

.margin-left-10 { margin-left: 10px; }
.margin-right-10 { margin-right: 10px; }
.margin-bottom-10 { margin-bottom: 10px; }
.margin-bottom-30 { margin-bottom: 30px; }
.margin-top-0 { margin-top: 0; }
.margin-top { margin-top: 1.25rem; }
.margin-bottom { margin-bottom: 1.25rem; }

.full-width { width: 100%; }
.max-height-200 { max-height: 200px; }
.max-200 {
  max-width: 200px;
  max-height: 200px;
}

 .absolute-right {
   position: absolute;
   right: 20px;
   top: 0;
   bottom: 0;
   margin: auto;
 }

 .slim-tag {
   height: .8em !important;
 }

 .centered {
   margin-left: auto;
   margin-right: auto;
 }

 .overflow-scroll { overflow: scroll; }

 .flex-wrap {
   flex-wrap: wrap;
 }

 .flex-column-small {
   @include mobile {
     flex-direction: column;
   }
 }

